--- a/settings.ini
+++ b/settings.ini
@@ -11,7 +11,7 @@ description = The TRR 265 analysis pipeline.
 keywords = trr265 sfb265
 author = Hilmar Zech
 author_email = hgzech@gmail.com
-# copyright = Put your copyright information here
+copyright = Hilmar Zech
 branch = {branch}
 version = 0.0.1
 min_python = 3.6
