added branch to settings.ini

--- a/settings.ini
+++ b/settings.ini
@@ -12,7 +12,7 @@ keywords = trr265 sfb265
 author = Hilmar Zech
 author_email = hgzech@gmail.com
 copyright = Hilmar Zech
-branch = {branch}
+branch = master
 version = 0.0.1
 min_python = 3.6
 audience = Developers
