--- a/docs/_data/topnav.yml
+++ b/docs/_data/topnav.yml
@@ -2,7 +2,7 @@ topnav:
 - title: Topnav
   items:
     - title: github
-      external_url: https://github.com/hgzech/trr265/tree/{branch}/
+      external_url: https://github.com/hgzech/trr265/tree/master/
 
 #Topnav dropdowns
 topnav_dropdowns:
