Refactored dataprovider into class.

--- a/settings.ini
+++ b/settings.ini
@@ -13,7 +13,7 @@ author = Hilmar Zech
 author_email = hgzech@gmail.com
 copyright = Hilmar Zech
 branch = master
-version = 0.0.1
+version = 0.0.2
 min_python = 3.6
 audience = Developers
 language = English
@@ -25,7 +25,7 @@ license = apache2
 status = 2
 
 # Optional. Same format as setuptools requirements
-requirements = bs4 pandas numpy pyarrow openpyxl lxml
+requirements = bs4 pandas numpy pyarrow openpyxl lxml matplotlib seaborn biur fastcore
 # Optional. Same format as setuptools console_scripts
 # console_scripts = 
 # Optional. Same format as setuptools dependency-links
