--- a/conda/trr265/meta.yaml
+++ b/conda/trr265/meta.yaml
@@ -1,9 +1,9 @@
 package:
   name: trr265
-  version: 0.0.1
+  version: 0.0.2
 source:
-  sha256: 14b02d66915a22ce4580257fa880ef6c87ccb550c44ce882df39adc1b65a2918
-  url: https://files.pythonhosted.org/packages/37/8f/93ba9e9bb8c74b85fef30c1088e5fbc5014feacdb8852bbee7ff52dbae03/trr265-0.0.1.tar.gz
+  sha256: 10e16868374c5e40c4690054f9ef4b02fe16de785477c788a0f219daaffd7a2b
+  url: https://files.pythonhosted.org/packages/04/ec/d63b16898426c4844d704d4e965970f79782999ec79f12979d17b8f9dc0a/trr265-0.0.2.tar.gz
 about:
   dev_url: https://hgzech.github.io
   doc_url: https://hgzech.github.io
@@ -23,10 +23,22 @@ requirements:
   - pip
   - python
   - packaging
+  - bs4
+  - pandas
+  - numpy
+  - pyarrow
+  - openpyxl
+  - lxml
   run:
   - pip
   - python
   - packaging
+  - bs4
+  - pandas
+  - numpy
+  - pyarrow
+  - openpyxl
+  - lxml
 test:
   imports:
   - trr265
