Added movisense data and gbe data preprocessing

--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -15,6 +15,9 @@ entries:
     - output: web,pdf
       title: Data Provider
       url: data_provider.html
+    - output: web,pdf
+      title: GBE
+      url: gbe.html
     output: web
     title: trr265
   output: web
