--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -18,6 +18,9 @@ entries:
     - output: web,pdf
       title: GBE
       url: gbe.html
+    - output: web,pdf
+      title: Information Sampling Task
+      url: IST.html
     output: web
     title: trr265
   output: web
