Added first reliability analyses

--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -21,6 +21,9 @@ entries:
     - output: web,pdf
       title: Working memory task - Scoring
       url: gbe.wm.scoring.html
+    - output: web,pdf
+      title: Stats
+      url: stats.html
     output: web
     title: trr265
   output: web
